# conceptor

./: .editorconfig  .env.development.sample  .gitignore  .mcp.sample.json  .tool-versions  CLAUDE.md  DEVELOP.md  Tiltfile  cody-bootstrap.md  dev-setup.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vitest-base.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer-v1.md  memory-searcher-v1.md  third-party-code-investigator-v1.md
.claude/custom-instructions/: knowledge-management.mdc  package-orientation.md  typescript-style-guidelines.md
.claude/mcp-descriptions/: basic-memory.mdc  brave-search.mdc  github-mcp.mdc  package-registry.mdc  tavily-search.mdc
.cursor/rules/: cross-mcp-interactions.mdc
.husky/: post-checkout  post-merge  pre-commit
.memory-bank/docs/: Rich IDs Usage Guide.md
.memory-bank/domains/: Auth Domain.md  Auth-Connectors Domain.md  Events Domain.md  Tenants Domain.md  Units Domain.md
.memory-bank/implementations/: Health Check System Implementation.md
.memory-bank/processes/: Login Flow Process.md  Request Lifecycle.md
.memory-bank/specs/: Central Database Architecture.md  Central Project Architecture.md  Tiltfile and Dev Environment Architecture.md
.taskmaster/: CLAUDE.md  config.json  state.json
.taskmaster/docs/: 2025_08_09-central_health_checks.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
_dev-env/: kustomization.yaml  package.json
_dev-env/scripts/: build-central-client.bash  dev-setup.ts  ensure-minio.bash  (+6 more)
(+328 files in other folders)
